==> nnshi-s/gd32e50x-cmake-project-template/Firmware/GD32F1x0/Examples/USBD/ccid/src/smartcard.c <==
#include "smartcard.h"

void sc_handler(sc_state_enum *scstate, sc_APDU_commands *sc_APDU, sc_APDU_response *sc_response)
{
    uint32_t i = 0U;

    switch(*scstate){
    case SC_POWER_ON:
        if(SC_GET_A2R == sc_APDU->header.ins){
            /* smartcard initialization */
            sc_init();

            /* reset data from sc buffer */
            for(i = 0U; i < 40U; i++){
                sc_ATR_table[i] = 0U;
            }

            /* reset sc_A2R structure */
            sc_A2R.ts = 0U;
            sc_A2R.t0 = 0U;
            for (i = 0U; i < SETUP_LENGTH; i++){
                sc_A2R.t[i] = 0U;
            }

            for(i = 0U; i < HIST_LENGTH; i++){
                sc_A2R.h[i] = 0U;
            }

            sc_A2R.tlength = 0U;
            sc_A2R.hlength = 0U;

            /* next state */
            *scstate = SC_RESET_LOW;
        }
        break;

    case SC_RESET_LOW:
        if(SC_GET_A2R == sc_APDU->header.ins){
            /* if card is detected then POWER ON, card reset and wait for an answer) */
            if(1U == sc_detect()){
                while((SC_POWER_OFF != (*scstate)) && (SC_ACTIVE != (*scstate))){
                    /* check for answer to reset */
                    sc_answer_req(scstate, (uint8_t *)&sc_ATR_table[0], 40U);
                }
            }else{
                (*scstate) = SC_POWER_OFF;
            }
        }
        break;

    case SC_ACTIVE:
        if(SC_GET_A2R == sc_APDU->header.ins){
            if(T0_PROTOCOL == sc_decode_answer2reset(&sc_ATR_table[0])){
                (*scstate) = SC_ACTIVE_ON_T0;
            }else{
                (*scstate) = SC_POWER_OFF; 
            }
        }
        break;

    case SC_ACTIVE_ON_T0:
        sc_send_data(sc_APDU, sc_response);
        break;

    case SC_POWER_OFF:
        /* disable smartcard interface */
        sc_deinit(); 
        break;

    default:
        (*scstate) = SC_POWER_OFF;
    }
}

void sc_PTS_config(void)
{
    uint32_t work_baudrate = 0U, apbclock = 0U;
    uint8_t PPS_confirm_status = 1U;
    uint8_t PTS_cmd[4] = {0x00U, 0x00U, 0x00U, 0x00U};
    uint8_t PTS_answer[4] = {0x00U, 0x00U, 0x00U, 0x00U};

    /* reconfigure the USART baud-rate */
    apbclock = rcu_clock_freq_get(CK_USART);

    apbclock /= ((USART_GP(SC_USART)& (uint16_t)0x00FFU) * 2U);

    /* Enable the DMA Receive (Set DMAR bit only) to enable interrupt generation
       in case of a framing error FE */
    usart_dma_receive_config(SC_USART, USART_DENR_ENABLE);

    if(0x10U == (sc_A2R.t0 & (uint8_t)0x10)){
        if(0x11U != sc_A2R.t[0]){
            /* PPSS identifies the PPS request or response and is equal to 0xFF */
            PTS_cmd[0] = 0xFFU;

            /* PPS0 indicates by the bits b5, b6, b7 equal to 1 the presence of the optional
            bytes PPSI1, PPS2, PPS3 respectively */
            PTS_cmd[1] = 0x10U;

            /* PPS1 allows the interface device to propose value of F and D to the card */
            PTS_cmd[2] = sc_A2R.t[0];

            /* PCK check character */
            PTS_cmd[3] = (uint8_t)0xFF^(uint8_t)0x10^(uint8_t)sc_A2R.t[0];

            /* send command */
            for(uint8_t i = 0U; i < 4U; i++){
                scdata = PTS_cmd[i];
                usart_data_transmit(SC_USART, scdata);
                while(RESET == usart_flag_get(SC_USART, USART_FLAG_TC));
            }

            /* Disable the DMA Receive (Reset DMAR bit only) */  
            usart_dma_receive_config(SC_USART, USART_DENR_DISABLE);

            /* start the receive process: to receive the command answer from the card */
            for(uint8_t i = 0U; i < 4U; i++){
                usart_byte_receive((uint8_t *)&PTS_answer[i], SC_RECEIVE_TIMEOUT);
            }

            /* check the received command answer */
            if((0xFFU != PTS_answer[0]) || (0x10U != PTS_answer[1]) || (PTS_answer[2] != sc_A2R.t[0]) ||
            (PTS_answer[3] != ((uint8_t)0xFF^(uint8_t)0x10^(uint8_t)sc_A2R.t[0]))){
                /* PPSS, PPS0, PPS1 and PCK exchange unsuccessful */
                PPS_confirm_status = 0x00U;
            }

            /* PPS exchange successful */
            if(0x01U == PPS_confirm_status){
                work_baudrate = apbclock * D_table[(sc_A2R.t[0] & (uint8_t)0x0F)];
                work_baudrate /= F_table[((sc_A2R.t[0] >> 4U) & (uint8_t)0x0FU)];

                usart_disable(SC_USART);
                usart_baudrate_set(SC_USART, work_baudrate);
                usart_parity_config(SC_USART, USART_PM_EVEN);
                usart_word_length_set(SC_USART, USART_WL_9BIT);
                usart_stop_bit_set(SC_USART, USART_STB_1_5BIT);
                usart_transmit_config(SC_USART, USART_TRANSMIT_ENABLE);
                usart_receive_config(SC_USART, USART_RECEIVE_ENABLE);
                usart_enable(SC_USART);
            }
        }
    }
}

void sc_init(void)
{
    /* enable smartcard interface clock */
    SC_3_5V_CLK_ENABLE();
    SC_RESET_CLK_ENABLE();
    SC_CMDVCC_CLK_ENABLE();
    SC_DETECT_CLK_ENABLE();

    /* configure smartcard 3/5V pin */
    gpio_mode_set(SC_3_5V_GPIO_PORT, GPIO_MODE_OUTPUT, GPIO_PUPD_NONE, SC_3_5V_PIN);
    gpio_output_options_set(SC_3_5V_GPIO_PORT, GPIO_OTYPE_PP, GPIO_OSPEED_10MHZ, SC_3_5V_PIN);

    /* configure smartcard RESET pin */
    gpio_mode_set(SC_RESET_GPIO_PORT, GPIO_MODE_OUTPUT, GPIO_PUPD_NONE, SC_RESET_PIN);
    gpio_output_options_set(SC_RESET_GPIO_PORT, GPIO_OTYPE_PP, GPIO_OSPEED_10MHZ, SC_RESET_PIN);

    /* configure smartcard CMDVCC pin */
    gpio_mode_set(SC_CMDVCC_GPIO_PORT, GPIO_MODE_OUTPUT, GPIO_PUPD_NONE, SC_CMDVCC_PIN);
    gpio_output_options_set(SC_CMDVCC_GPIO_PORT, GPIO_OTYPE_PP, GPIO_OSPEED_10MHZ, SC_CMDVCC_PIN);

    /* configure smartcard DETECT pin */
    gpio_mode_set(SC_DETECT_GPIO_PORT, GPIO_MODE_INPUT, GPIO_PUPD_NONE, SC_DETECT_PIN);
    syscfg_exti_line_config(SC_DETECT_EXTI_PORT_SOURCE, SC_DETECT_EXTI_PIN_SOURCE);
    exti_init(SC_DETECT_EXTI_LINE, EXTI_INTERRUPT, EXTI_TRIG_RISING);
    exti_interrupt_flag_clear(SC_DETECT_EXTI_LINE);

    /* configure the NVIC for smartcard DETECT pin */
    nvic_irq_enable(SC_DETECT_EXTI_IRQn, 2U, 0U);

    /***********************************************************
     USART configured as follow:
        - Word Length = 9 Bits
        - 1.5 Stop Bit
        - Even parity
        - BaudRate = 10753 baud
        - Hardware flow control disabled (RTS and CTS signals)
        - Tx and Rx enabled
        - USART Clock enabled
    *************************************************************/
    /* enable clock  */
    SC_USART_GPIO_CLK_ENABLE();
    SC_USART_CLK_ENABLE();

    /* configure USARTx_CK pin */
    gpio_af_set(SC_USART_CK_GPIO_PORT, SC_USART_CK_AF, SC_USART_CK_PIN);
    gpio_mode_set(SC_USART_CK_GPIO_PORT, GPIO_MODE_AF, GPIO_PUPD_NONE, SC_USART_CK_PIN);
    gpio_output_options_set(SC_USART_CK_GPIO_PORT, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, SC_USART_CK_PIN);

    /* configure USARTx_Tx pin */
    gpio_af_set(SC_USART_TX_GPIO_PORT, SC_USART_TX_AF, SC_USART_TX_PIN);
    gpio_mode_set(SC_USART_TX_GPIO_PORT, GPIO_MODE_AF, GPIO_PUPD_PULLUP, SC_USART_TX_PIN);
    gpio_output_options_set(SC_USART_TX_GPIO_PORT, GPIO_OTYPE_OD, GPIO_OSPEED_50MHZ, SC_USART_TX_PIN);

    /* configure the NVIC for SC_USART IRQ */
    nvic_irq_enable(SC_USART_IRQn, 0U, 0U);

    /* configure the initial parameter */
    usart_deinit(SC_USART);

    /* USART clock set to 4 MHz */

    usart_prescaler_config(SC_USART, (rcu_clock_freq_get(CK_USART)/1000000U)/(4*2));

    /* USART Guard Time set to 16 Bit */
    usart_guard_time_config(SC_USART, 16U);

    /* configure smartcard clock  */
    usart_synchronous_clock_config(SC_USART, USART_CLEN_EN, USART_CPH_1CK, USART_CPL_LOW);
    usart_clock_enable(SC_USART);

    usart_baudrate_set(SC_USART, 10753U);
    usart_parity_config(SC_USART, USART_PM_EVEN);
    usart_word_length_set(SC_USART, USART_WL_9BIT);
    usart_stop_bit_set(SC_USART, USART_STB_1_5BIT);
    usart_transmit_config(SC_USART, USART_TRANSMIT_ENABLE);
    usart_receive_config(SC_USART, USART_RECEIVE_ENABLE);
    usart_hardware_flow_rts_config(SC_USART, USART_RTS_DISABLE);
    usart_hardware_flow_cts_config(SC_USART, USART_RTS_DISABLE);

    /* enable the SC_USART Parity error interrupt */
    usart_interrupt_enable(SC_USART, USART_INT_PERR);

    /* enable the SC_USART Framing¡¢ORERR¡¢NERR error interrupt */
    usart_interrupt_enable(SC_USART, USART_INT_ERR);

    /* enable the NACK transmission */
    usart_smartcard_mode_nack_enable(SC_USART);

    /* enable the smartcard interface */
    usart_smartcard_mode_enable(SC_USART);

    /* configure the auto retry */
    usart_smartcard_autoretry_config(SC_USART, 0x06);

    /* enable SC_USART */
    usart_enable(SC_USART);

    /***********************************************************
    SmartCard interface configure:
        - select voltage;
        - disable power
        - set reset pin
    *************************************************************/
    /* select 5V */
    sc_voltage_config(SC_VOLTAGE_5V);

    /* disable CMDVCC */
    sc_power_cmd(DISABLE);

    /* set RSTIN high */
    sc_reset(RESET);
}

void sc_power_cmd(EventStatus new_state)
{
    if(DISABLE != new_state){
        gpio_bit_set(SC_CMDVCC_GPIO_PORT, SC_CMDVCC_PIN);
    }else{
        gpio_bit_reset(SC_CMDVCC_GPIO_PORT, SC_CMDVCC_PIN);
    }
}

void sc_reset(bit_status pin_state)
{
    if(RESET == pin_state){
        /* configure reset pin to low level */
        gpio_bit_reset(SC_RESET_GPIO_PORT, SC_RESET_PIN);
    }else{
        /* configure reset pin to high level */
        gpio_bit_set(SC_RESET_GPIO_PORT, SC_RESET_PIN);
    }
}

void sc_voltage_config(uint32_t sc_voltage)
{
    if(SC_VOLTAGE_5V == sc_voltage){
        /* select smartcard 5V */  
        gpio_bit_set(SC_3_5V_GPIO_PORT, SC_3_5V_PIN);
    }else{
        /* select smartcard 3V */
        gpio_bit_reset(SC_3_5V_GPIO_PORT, SC_3_5V_PIN);
    }
}

uint32_t sc_get_DTable_value(uint8_t index)
{
    return D_table[index];
}

void sc_parity_error_handler(void)
{
    usart_data_transmit(SC_USART, scdata);

    while(usart_flag_get(SC_USART, USART_FLAG_TC) == RESET){
    }
}

static void sc_deinit(void)
{
    /* disable CMDVCC */
    sc_power_cmd(DISABLE);

    /* deinitialize SC_USART */
    usart_deinit(SC_USART);

    /* disable SC_USART clock */
    SC_USART_CLK_DISABLE();
}

static uint8_t sc_decode_answer2reset(uint8_t *card)
{
    uint32_t i = 0U, flag = 0U, buf = 0U, protocol = 0U;

    /* initial character */
    sc_A2R.ts = card[0];

    /* format character */
    sc_A2R.t0 = card[1];

    sc_A2R.hlength = sc_A2R.t0 & (uint8_t)0x0FU;

    if(0x80U == (sc_A2R.t0 & (uint8_t)0x80U)){
        flag = 1U;
    }

    for(i = 0U; i < 4U; i++){
        sc_A2R.tlength = sc_A2R.tlength + (((sc_A2R.t0 & (uint8_t)0xF0U) >> (4U + i)) & (uint8_t)0x1U);
    }

    for(i = 0U; i < sc_A2R.tlength; i++) {
        sc_A2R.t[i] = card[i + 2];
    }

    if(0x0U == (sc_A2R.t0 & (uint8_t)0x80U)){
        protocol = 0U;
    }else{
        protocol = sc_A2R.t[sc_A2R.tlength - 1U] & (uint8_t)0x0FU;
    }

    while(flag){
        if (0x80U == (sc_A2R.t[sc_A2R.tlength - 1U] & (uint8_t)0x80U)){
            flag = 1U;
        }else{
            flag = 0U;
        }

        buf = sc_A2R.tlength;
        sc_A2R.tlength = 0U;

        for (i = 0U; i < 4U; i++){
            sc_A2R.tlength = sc_A2R.tlength + (((sc_A2R.t[buf - 1U] & (uint8_t)0xF0) >> (4U + i)) & (uint8_t)0x1U);
        }

        for (i = 0U;i < sc_A2R.tlength; i++){
            sc_A2R.t[buf + i] = card[i + 2U + buf];
        }
        sc_A2R.tlength += (uint8_t)buf;
    }

    for (i = 0U; i < sc_A2R.hlength; i++){
        sc_A2R.h[i] = card[i + 2U + sc_A2R.tlength];
    }

  return (uint8_t)protocol;
}

static void sc_answer_req(sc_state_enum *scstate, uint8_t *card, uint8_t length)
{
    uint8_t data = 0U;
    uint16_t i = 0U;
    ATR_length = 0U;

    switch(*scstate){
    case SC_RESET_LOW:
        sc_reset(RESET);
        /* check response with reset low */
        for(i = 0U; i < length; i++){
            if(SUCCESS == usart_byte_receive(&data, SC_RECEIVE_TIMEOUT)){
                card[i] = data;
                ATR_length++;
            }
        }

        if(0x0U != card[0]){
            (*scstate) = SC_ACTIVE;
        }else{
            (*scstate) = SC_RESET_HIGH;
        }
        break;

    case SC_RESET_HIGH:
        sc_reset(SET);
        /* check response with reset high */
        for(i = 0U; i < length; i++){
            if(SUCCESS == usart_byte_receive(&data, SC_RECEIVE_TIMEOUT)){
                card[i] = data;
                ATR_length++;
            }
        }

        if(card[0]){
            (*scstate) = SC_ACTIVE;
        }else{
            (*scstate) = SC_POWER_OFF;
        }
        break;

    case SC_ACTIVE:
        break;

    case SC_POWER_OFF:
        /* if no answer data is received, close the connection */
        sc_reset(SET);
        sc_power_cmd(DISABLE);
        break;

    default:
        (*scstate) = SC_RESET_LOW;
        break;
    }
}

static ErrStatus usart_byte_receive(uint8_t *data, uint32_t timeout)
{
    uint32_t counter = 0U;

    while((RESET == usart_flag_get(SC_USART, USART_FLAG_RBNE)) && (counter != timeout)){
        counter++;
    }

    if(counter != timeout){
        *data = (uint8_t)usart_data_receive(SC_USART);
        return SUCCESS;
    }else{
        return ERROR;
    }
}
